pages/big-ideas-little-pictures.module.css
.youtube_container iframe {
  aspect-ratio: 16 / 9;
  height: auto;
  width: 100%;
}

.blockquote p:not(:last-child) {
  margin-bottom: 1rem;
}

.cite {
  font-style: normal;
}

.tocGrid {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.5rem 2rem;
  list-style: none;
  padding: 0;
  margin: 0;
  counter-reset: toc-counter;
}

@media (min-width: 1024px) {
  .tocGrid {
    grid-template-columns: 1fr 1fr;
  }
}

.tocSection {
  counter-increment: toc-counter;
  display: list-item;
  list-style: none;
  position: relative;
  padding-left: 3rem;
}

.tocSection::before {
  content: counter(toc-counter);
  position: absolute;
  left: 0;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 2rem;
  height: 2rem;
  background-color: #fbbf24;
  border-radius: 50%;
  font-weight: 600;
  font-size: 0.875rem;
}

.tocTitle {
  font-size: 1.125rem;
  font-weight: 600;
  margin: 0;
}

.tocDescription {
  margin: 0;
  margin-top: 0.5rem;
}

